--- a/src/components/app-info/app-info.css
+++ b/src/components/app-info/app-info.css
@@ -1,13 +1,14 @@
 .app-info
 {
     position: relative;
-    padding: 40px 25px;
     background: #3d5a80;
-    width: 25%;
-    height: 87vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    height: 100vh;
     box-shadow: 15px 15px 30px rgba(0, 0, 0, .15);
     color: #fff;
-    margin: auto 0;
 }
 .app-info h1
 {
@@ -16,4 +17,13 @@
 .app-info h2
 {
     font-size: 18px;
+}
+
+@media (max-width: 1024px)
+{
+    .app-info
+    {
+        height: 100%;
+        padding: 10px;
+    }
 }
