--- a/src/components/app/app.css
+++ b/src/components/app/app.css
@@ -1,8 +1,8 @@
 .app 
 {
     width: 100%;
-    display: flex;
-    padding-top: 40px;
+    display: grid;
+    grid-template-columns: 25% 75%;
 }
 .main
 {
@@ -11,4 +11,16 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+}
+
+@media (max-width: 1024px){
+    .app
+    {
+        grid-template-columns: 1fr;
+    }
+    .main
+    {
+        margin-top: 20px;
+        height: 100vh;
+    }
 }
