--- a/src/components/employers-list-item/employers-list-item.css
+++ b/src/components/employers-list-item/employers-list-item.css
@@ -15,10 +15,11 @@
     line-height: 30px;
     font-size: 20px;
     cursor: pointer;
-    min-width: 550px;
+    width: 50%;
 }
 .list-group-item input
 {
+    width: 10%;
     line-height: 30px;
     font-size: 20px;
     text-align: center;
@@ -65,4 +66,16 @@
 .list-group-item.increase .btn-star
 {
     color: #aeaeae
+}
+
+@media (max-width: 620px)
+{
+    .list-group-item span
+    {
+        font-size: 16px;
+    }
+    .list-group-item input
+    {
+        font-size: 16px;
+    }
 }
