--- a/src/components/employers-list/employers-list.css
+++ b/src/components/employers-list/employers-list.css
@@ -10,3 +10,11 @@
     margin-top: 30px;
     overflow: auto;
 }
+
+@media (max-width: 620px)
+{
+    .app-list
+    {
+        margin-top: 12px;
+    }
+}
