--- a/src/components/employers-add-form/employers-add-form.css
+++ b/src/components/employers-add-form/employers-add-form.css
@@ -17,3 +17,11 @@
     width: 350px;
     margin-right: 20px;
 }
+
+@media (max-width: 620px)
+{
+    .add-form input
+    {
+        width: 100%;
+    }
+}
